full responsive site

--- a/index.html
+++ b/index.html
@@ -8,7 +8,42 @@
   </head>
   <body>
     <header class="header"></header>
-    <main class="main"></main>
+    <main class="main">
+      <div class="card">
+        <div class="card__content">
+          <h1 class="card__title">
+            Get <span>insights</span> that help your business grow.
+          </h1>
+          <p class="card__description">
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+          <div class="card__tags">
+            <span class="card__tag">
+              <h2>10k+</h2>
+              <p>Companies</p>
+            </span>
+            <span class="card__tag">
+              <h2>314</h2>
+              <p>Templates</p>
+            </span>
+            <span class="card__tag">
+              <h2>12M+</h2>
+              <p>Queries</p>
+            </span>
+          </div>
+        </div>
+        <div class="card__image">
+          <img
+            src="./Bitmap.png"
+            alt=""
+            width="540"
+            height="446"
+            class="card__img"
+          />
+        </div>
+      </div>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
